--- a/Main.html
+++ b/Main.html
@@ -21,7 +21,7 @@
 <body>
   <p>
     If you are not redirected, 
-    <a href="https://pxls.space/#x=1156&y=1224&scale=5&template=https%3A%2F%2Fclueless-r2.pxls.space%2F099e7b392ef45ffa.png&ox=943&oy=1042&tw=540&title=PFamV4Numbers&convert=unconverted">click here</a>.
+    <a href="https://pxls.space/#x=1113&y=1358&scale=2.31&template=https%3A%2F%2Fclueless-r2.pxls.space%2Feded170f4dcf3878.png&ox=943&oy=1042&tw=540&title=PFamV4&convert=unconverted">click here</a>.
   </p>
 </body>
 </html>
