--- a/Dotted.html
+++ b/Dotted.html
@@ -1,1 +1,27 @@
-
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta http-equiv="refresh" content="0;https://pxls.space/#x=1111&y=1279&scale=2.33&template=https%3A%2F%2Fclueless-r2.pxls.space%2Fef84ce704b93b95a.png&ox=943&oy=1042&tw=540&title=PFamV4Dotted&convert=unconverted">
+  <title>Redirecting...</title>
+  <style>
+    body {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      height: 100vh; /* Full viewport height */
+      margin: 0;
+    }
+    p {
+      font-size: 24px;
+      text-align: center;
+    }
+  </style>
+</head>
+<body>
+  <p>
+    If you are not redirected, 
+    <a href="https://pxls.space/#x=1111&y=1279&scale=2.33&template=https%3A%2F%2Fclueless-r2.pxls.space%2Fef84ce704b93b95a.png&ox=943&oy=1042&tw=540&title=PFamV4Dotted&convert=unconverted">click here</a>.
+  </p>
+</body>
+</html>
