--- a/Numbers.html
+++ b/Numbers.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
+  // paste new template url in the content="" section here
   <meta http-equiv="refresh" content="0;https://pxls.space/#x=1156&y=1224&scale=5&template=https%3A%2F%2Fclueless-r2.pxls.space%2F099e7b392ef45ffa.png&ox=943&oy=1042&tw=540&title=PFamV4Numbers&convert=unconverted">
   <title>Redirecting...</title>
   <style>
@@ -18,7 +19,8 @@
     }
   </style>
 </head>
-<body>
+<body> 
+// same as above comment
   <p>
     If you are not redirected, 
     <a href="https://pxls.space/#x=1156&y=1224&scale=5&template=https%3A%2F%2Fclueless-r2.pxls.space%2F099e7b392ef45ffa.png&ox=943&oy=1042&tw=540&title=PFamV4Numbers&convert=unconverted">click here</a>.
