--- a/Main.html
+++ b/Main.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  // add template url in the comma link here when updating the template
+  // paste new template url into content="0;"
  <meta http-equiv="refresh" content="0;https://pxls.space/#x=1113&y=1358&scale=2.31&template=https%3A%2F%2Fclueless-r2.pxls.space%2Feded170f4dcf3878.png&ox=943&oy=1042&tw=540&title=PFamV4&convert=unconverted">
   <title>Redirecting...</title>
   <style>
@@ -20,7 +20,7 @@
   </style>
 </head>
 <body>
-  // add template url in the comma here when updating the template
+  // same as above comment
   <p>
     If you are not redirected, 
     <a href="https://pxls.space/#x=1113&y=1358&scale=2.31&template=https%3A%2F%2Fclueless-r2.pxls.space%2Feded170f4dcf3878.png&ox=943&oy=1042&tw=540&title=PFamV4&convert=unconverted">click here</a>.
