--- a/Full.html
+++ b/Full.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
+  // paste template url into content="0;" when updating template
   <meta http-equiv="refresh" content="0;https://pxls.space/#x=1113&y=1358&scale=2.31&template=https%3A%2F%2Fclueless-r2.pxls.space%2Feded170f4dcf3878.png&ox=943&oy=1042&tw=540&title=PFamV4&convert=unconverted">
   <title>Redirecting...</title>
   <style>
@@ -18,7 +19,8 @@
     }
   </style>
 </head>
-<body>
+<body> 
+// same as above comment
   <p>
     If you are not redirected, 
     <a href="https://pxls.space/#x=1113&y=1358&scale=2.31&template=https%3A%2F%2Fclueless-r2.pxls.space%2Feded170f4dcf3878.png&ox=943&oy=1042&tw=540&title=PFamV4&convert=unconverted">click here</a>.
