--- a/Dotted.html
+++ b/Dotted.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
+// paste template url into content="0;" when updating template
   <meta http-equiv="refresh" content="0;https://pxls.space/#x=1111&y=1279&scale=2.33&template=https%3A%2F%2Fclueless-r2.pxls.space%2Fef84ce704b93b95a.png&ox=943&oy=1042&tw=540&title=PFamV4Dotted&convert=unconverted">
   <title>Redirecting...</title>
   <style>
@@ -19,6 +20,7 @@
   </style>
 </head>
 <body>
+  // same as above comment
   <p>
     If you are not redirected, 
     <a href="https://pxls.space/#x=1111&y=1279&scale=2.33&template=https%3A%2F%2Fclueless-r2.pxls.space%2Fef84ce704b93b95a.png&ox=943&oy=1042&tw=540&title=PFamV4Dotted&convert=unconverted">click here</a>.
