--- a/Main.html
+++ b/Main.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <!--paste new template url into content="0;" when updating-->
- <meta http-equiv="refresh" content="0;https://pxls.space/#x=1113&y=1358&scale=2.31&template=https%3A%2F%2Fclueless-r2.pxls.space%2Feded170f4dcf3878.png&ox=943&oy=1042&tw=540&title=PFamV4&convert=unconverted">
+ <meta http-equiv="refresh" content="0;https://canvas.cdawgva.com/#board=%2Fboards%2F3&tname=&tx=447&ty=0&tw=553&th=0&tconv=0&tsrc=https%3A%2F%2Fi.imgur.com%2FnGcZmfz.png">
   <title>Redirecting...</title>
   <style>
     body {
@@ -23,7 +23,7 @@
   <!--same as above comment-->
   <p>
     If you are not redirected, 
-    <a href="https://pxls.space/#x=1113&y=1358&scale=2.31&template=https%3A%2F%2Fclueless-r2.pxls.space%2Feded170f4dcf3878.png&ox=943&oy=1042&tw=540&title=PFamV4&convert=unconverted">click here</a>.
+    <a href="https://canvas.cdawgva.com/#board=%2Fboards%2F3&tname=&tx=447&ty=0&tw=553&th=0&tconv=0&tsrc=https%3A%2F%2Fi.imgur.com%2FnGcZmfz.png">click here</a>.
   </p>
 </body>
 </html>
