--- a/Main.html
+++ b/Main.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <!--paste new template url into content="0;" when updating-->
- <meta http-equiv="refresh" content="0;https://canvas.cdawgva.com/#board=%2Fboards%2F3&tname=Pfam%20Template&tx=447&ty=0&tw=553&th=0&tconv=0&tsrc=https%3A%2F%2Fi.imgur.com%2Fn4JAA9l.png">
+ <meta http-equiv="refresh" content="0;https://canvas.cdawgva.com/#board=%2Fboards%2F3&tname=Connor%20Template%20Full%20With%20Mane&tx=229&ty=0&tw=771&th=0&tconv=0&tsrc=https%3A%2F%2Fi.imgur.com%2FsfWYAk8.png">
   <title>Redirecting...</title>
   <style>
     body {
@@ -23,7 +23,7 @@
   <!--same as above comment-->
   <p>
     If you are not redirected, 
-    <a href="https://canvas.cdawgva.com/#board=%2Fboards%2F3&tname=Pfam%20Template&tx=447&ty=0&tw=553&th=0&tconv=0&tsrc=https%3A%2F%2Fi.imgur.com%2Fn4JAA9l.png">click here</a>.
+    <a href="https://canvas.cdawgva.com/#board=%2Fboards%2F3&tname=Connor%20Template%20Full%20With%20Mane&tx=229&ty=0&tw=771&th=0&tconv=0&tsrc=https%3A%2F%2Fi.imgur.com%2FsfWYAk8.png">click here</a>.
   </p>
 </body>
 </html>
