--- a/Main.html
+++ b/Main.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <!--paste new template url into content="0;" when updating-->
-  <meta http-equiv="refresh" content="0;https://canvas.cdawgva.com/#board=%2Fboards%2F3&tname=UnderDawgs%20V3&tx=251&ty=420&tw=481&th=0&tconv=0&tsrc=https%3A%2F%2Fraw.githubusercontent.com%2FMCReign187%2FPFam-Template-Redirects%2Frefs%2Fheads%2Fmain%2FTemplate.png">
+  <meta http-equiv="refresh" content="0;https://pxls.space/#x=741&y=741&scale=5&template=https%3A%2F%2Fclueless-r2.pxls.space%2F320dc6c41ada7980.png&ox=718&oy=714&tw=46">
   <title>Redirecting...</title>
   <style>
     body {
@@ -23,7 +23,7 @@
   <!--same as above comment-->
   <p>
     If you are not redirected, 
-    <a href="https://canvas.cdawgva.com/#board=%2Fboards%2F3&tname=UnderDawgs%20V3&tx=251&ty=420&tw=481&th=0&tconv=0&tsrc=https%3A%2F%2Fraw.githubusercontent.com%2FMCReign187%2FPFam-Template-Redirects%2Frefs%2Fheads%2Fmain%2FTemplate.png">click here</a>.
+    <a href="https://pxls.space/#x=741&y=741&scale=5&template=https%3A%2F%2Fclueless-r2.pxls.space%2F320dc6c41ada7980.png&ox=718&oy=714&tw=46">click here</a>.
   </p>
 </body>
 </html>
