--- a/Dotted.html
+++ b/Dotted.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
 <!--paste template url into content="0;" when updating template-->
-  <meta http-equiv="refresh" content="0;https://pxls.space/#x=1111&y=1279&scale=2.33&template=https%3A%2F%2Fclueless-r2.pxls.space%2Fef84ce704b93b95a.png&ox=943&oy=1042&tw=540&title=PFamV4Dotted&convert=unconverted">
+  <meta http-equiv="refresh" content="0;https://pxls.space/#x=563&y=529&scale=5&template=https%3A%2F%2Fclueless-r2.pxls.space%2Faf2115f3f378ae60.png&ox=171&oy=599&tw=46&title=&convert=unconverted">
   <title>Redirecting...</title>
   <style>
     body {
@@ -23,7 +23,7 @@
   <!--same as above comment-->
   <p>
     If you are not redirected, 
-    <a href="https://pxls.space/#x=1111&y=1279&scale=2.33&template=https%3A%2F%2Fclueless-r2.pxls.space%2Fef84ce704b93b95a.png&ox=943&oy=1042&tw=540&title=PFamV4Dotted&convert=unconverted">click here</a>.
+    <a href="https://pxls.space/#x=563&y=529&scale=5&template=https%3A%2F%2Fclueless-r2.pxls.space%2Faf2115f3f378ae60.png&ox=171&oy=599&tw=46&title=&convert=unconverted">click here</a>.
   </p>
 </body>
 </html>
