--- a/Main.html
+++ b/Main.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <!--paste new template url into content="0;" when updating-->
-  <meta http-equiv="refresh" content="0;https://pxls.space/#x=180&y=648&scale=6.5&template=https%3A%2F%2Fclueless-r2.pxls.space%2F320dc6c41ada7980.png&ox=171&oy=599&tw=46&title=&convert=unconverted">
+  <meta http-equiv="refresh" content="0;https://pxls.space/#x=194&y=616&scale=10.83&template=https%3A%2F%2Fclueless-r2.pxls.space%2Faa764e8bd46a56fa.png&ox=171&oy=599&tw=46&title=PFam&convert=unconverted">
   <title>Redirecting...</title>
   <style>
     body {
@@ -23,7 +23,7 @@
   <!--same as above comment-->
   <p>
     If you are not redirected, 
-    <a href="https:https://pxls.space/#x=180&y=648&scale=6.5&template=https%3A%2F%2Fclueless-r2.pxls.space%2F320dc6c41ada7980.png&ox=171&oy=599&tw=46&title=&convert=unconverted">click here</a>.
+    <a href="https:https://pxls.space/#x=194&y=616&scale=10.83&template=https%3A%2F%2Fclueless-r2.pxls.space%2Faa764e8bd46a56fa.png&ox=171&oy=599&tw=46&title=PFam&convert=unconverted">click here</a>.
   </p>
 </body>
 </html>
