--- a/Main.html
+++ b/Main.html
@@ -23,7 +23,7 @@
   <!--same as above comment-->
   <p>
     If you are not redirected, 
-    <a href="https:https://pxls.space/#x=194&y=616&scale=10.83&template=https%3A%2F%2Fclueless-r2.pxls.space%2Faa764e8bd46a56fa.png&ox=171&oy=599&tw=46&title=PFam&convert=unconverted">click here</a>.
+    <a href="https://pxls.space/#x=194&y=616&scale=10.83&template=https%3A%2F%2Fclueless-r2.pxls.space%2Faa764e8bd46a56fa.png&ox=171&oy=599&tw=46&title=PFam&convert=unconverted">click here</a>.
   </p>
 </body>
 </html>
