--- a/Numbers.html
+++ b/Numbers.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <!--paste new template url in the content="0;" when updating template-->
-  <meta http-equiv="refresh" content="0;https://pxls.space/#x=176&y=606&scale=50&template=https%3A%2F%2Fclueless-r2.pxls.space%2F7af170e1b12bcc11.png&ox=171&oy=599&tw=46&title=&convert=unconverted">
+  <meta http-equiv="refresh" content="0;https://pxls.space/#x=216&y=630&scale=10.75&template=https%3A%2F%2Fclueless-r2.pxls.space%2F7dcbb7ac5703cb36.png&ox=171&oy=599&tw=46&title=PFamV2Numbers&convert=unconverted">
   <title>Redirecting...</title>
   <style>
     body {
@@ -23,7 +23,7 @@
 <!--same as above comment-->
   <p>
     If you are not redirected, 
-    <a href="https://pxls.space/#x=176&y=606&scale=50&template=https%3A%2F%2Fclueless-r2.pxls.space%2F7af170e1b12bcc11.png&ox=171&oy=599&tw=46&title=&convert=unconverted">click here</a>.
+    <a href="https://pxls.space/#x=216&y=630&scale=10.75&template=https%3A%2F%2Fclueless-r2.pxls.space%2F7dcbb7ac5703cb36.png&ox=171&oy=599&tw=46&title=PFamV2Numbers&convert=unconverted">click here</a>.
   </p>
 </body>
 </html>
