--- a/Main.html
+++ b/Main.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <!--paste new template url into content="0;" when updating-->
-  <meta http-equiv="refresh" content="0;https://pxls.space/#x=192&y=620&scale=23.27&template=https%3A%2F%2Fclueless-r2.pxls.space%2Fe9e74c09c6463386.png&ox=171&oy=599&tw=46&title=PFamV2&convert=unconverted">
+  <meta http-equiv="refresh" content="0;https://pxls.space/#x=1285&y=2911&scale=5.04&template=https%3A%2F%2Fclueless-r2.pxls.space%2Fcd43025b22a91984.png&ox=1221&oy=2862&tw=61&title=PFam&convert=unconverted">
   <title>Redirecting...</title>
   <style>
     body {
@@ -23,7 +23,7 @@
   <!--same as above comment-->
   <p>
     If you are not redirected, 
-    <a href="https://pxls.space/#x=192&y=620&scale=23.27&template=https%3A%2F%2Fclueless-r2.pxls.space%2Fe9e74c09c6463386.png&ox=171&oy=599&tw=46&title=PFamV2&convert=unconverted">click here</a>.
+    <a href="https://pxls.space/#x=1285&y=2911&scale=5.04&template=https%3A%2F%2Fclueless-r2.pxls.space%2Fcd43025b22a91984.png&ox=1221&oy=2862&tw=61&title=PFam&convert=unconverted">click here</a>.
   </p>
 </body>
 </html>
