--- a/Main.html
+++ b/Main.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <!--paste new template url into content="0;" when updating-->
-  <meta http-equiv="refresh" content="0;https://pxls.space/#x=1206&y=2878&scale=4.1&template=https%3A%2F%2Fclueless-r2.pxls.space%2Ffc66613312ebad6f.png&ox=1221&oy=2794&tw=61&title=&convert=unconverted">
+  <meta http-equiv="refresh" content="0;https://pxls.space/#x=825&y=1488&scale=0.61&template=https%3A%2F%2Fclueless-r2.pxls.space%2F7af2c4aadf56fb66.png&ox=548&oy=1431&tw=514&title=PFam&convert=unconverted">
   <title>Redirecting...</title>
   <style>
     body {
@@ -23,7 +23,7 @@
   <!--same as above comment-->
   <p>
     If you are not redirected, 
-    <a href="https://pxls.space/#x=1206&y=2878&scale=4.1&template=https%3A%2F%2Fclueless-r2.pxls.space%2Ffc66613312ebad6f.png&ox=1221&oy=2794&tw=61&title=&convert=unconverted">click here</a>.
+    <a href="https://pxls.space/#x=825&y=1488&scale=0.61&template=https%3A%2F%2Fclueless-r2.pxls.space%2F7af2c4aadf56fb66.png&ox=548&oy=1431&tw=514&title=PFam&convert=unconverted">click here</a>.
   </p>
 </body>
 </html>
