--- a/Numbers.html
+++ b/Numbers.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <!--paste new template url in the content="0;" when updating template-->
-  <meta http-equiv="refresh" content="0;https://pxls.space/#x=1305&y=2905&scale=5&template=https%3A%2F%2Fclueless-r2.pxls.space%2F55eb232698116f4e.png&ox=1221&oy=2794&tw=61&title=&convert=unconverted">
+  <meta http-equiv="refresh" content="0;https://pxls.space/#x=863&y=1537&scale=0.5&template=https%3A%2F%2Fclueless-r2.pxls.space%2F7af2c4aadf56fb66.png&ox=650&oy=1399&tw=514&title=PFam&convert=unconverted">
   <title>Redirecting...</title>
   <style>
     body {
@@ -23,7 +23,7 @@
 <!--same as above comment-->
   <p>
     If you are not redirected, 
-    <a href="https://pxls.space/#x=1305&y=2905&scale=5&template=https%3A%2F%2Fclueless-r2.pxls.space%2F55eb232698116f4e.png&ox=1221&oy=2794&tw=61&title=&convert=unconverted">click here</a>.
+    <a href="https://pxls.space/#x=863&y=1537&scale=0.5&template=https%3A%2F%2Fclueless-r2.pxls.space%2F7af2c4aadf56fb66.png&ox=650&oy=1399&tw=514&title=PFam&convert=unconverted">click here</a>.
   </p>
 </body>
 </html>
