--- a/Dotted.html
+++ b/Dotted.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
 <!--paste template url into content="0;" when updating template-->
-  <meta http-equiv="refresh" content="0;https://pxls.space/#x=1280&y=2851&scale=7.45&template=https%3A%2F%2Fclueless-r2.pxls.space%2F150eb1bc6ed2b344.png&ox=1221&oy=2794&tw=61&title=&convert=unconverted">
+  <meta http-equiv="refresh" content="0;https://pxls.space/#x=712&y=1622&scale=5&template=https%3A%2F%2Fclueless-r2.pxls.space%2F3a3f6ecea9539015.png&ox=452&oy=1383&tw=500&title=PFamDotted&convert=unconverted">
   <title>Redirecting...</title>
   <style>
     body {
@@ -23,7 +23,7 @@
   <!--same as above comment-->
   <p>
     If you are not redirected, 
-    <a href="https://pxls.space/#x=1280&y=2851&scale=7.45&template=https%3A%2F%2Fclueless-r2.pxls.space%2F150eb1bc6ed2b344.png&ox=1221&oy=2794&tw=61&title=&convert=unconverted">click here</a>.
+    <a href="https://pxls.space/#x=712&y=1622&scale=5&template=https%3A%2F%2Fclueless-r2.pxls.space%2F3a3f6ecea9539015.png&ox=452&oy=1383&tw=500&title=PFamDotted&convert=unconverted">click here</a>.
   </p>
 </body>
 </html>
