--- a/Main.html
+++ b/Main.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <!--paste new template url into content="0;" when updating-->
-  <meta http-equiv="refresh" content="0;https://pxls.space/#x=713&y=1634&scale=0.41&template=https%3A%2F%2Fclueless-r2.pxls.space%2F65d9c3337fc868cd.png&ox=452&oy=1383&tw=500&title=PFam&convert=unconverted">
+  <meta http-equiv="refresh" content="0;https://pxls.space/#x=702&y=1645&scale=5&template=https%3A%2F%2Fclueless-r2.pxls.space%2F623d7f71a4f97fd6.png&ox=447&oy=1380&tw=511&title=PFam%20V2&convert=unconverted">
   <title>Redirecting...</title>
   <style>
     body {
@@ -23,7 +23,7 @@
   <!--same as above comment-->
   <p>
     If you are not redirected, 
-    <a href="https://pxls.space/#x=713&y=1634&scale=0.41&template=https%3A%2F%2Fclueless-r2.pxls.space%2F65d9c3337fc868cd.png&ox=452&oy=1383&tw=500&title=PFam&convert=unconverted">click here</a>.
+    <a href="https://pxls.space/#x=702&y=1645&scale=5&template=https%3A%2F%2Fclueless-r2.pxls.space%2F623d7f71a4f97fd6.png&ox=447&oy=1380&tw=511&title=PFam%20V2&convert=unconverted">click here</a>.
   </p>
 </body>
 </html>
