--- a/Main.html
+++ b/Main.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <!--paste new template url into content="0;" when updating-->
-  <meta http-equiv="refresh" content="0;https://pxls.space/#x=702&y=1645&scale=5&template=https%3A%2F%2Fclueless-r2.pxls.space%2F623d7f71a4f97fd6.png&ox=447&oy=1380&tw=511&title=PFam%20V2&convert=unconvertedd">
+  <meta http-equiv="refresh" content="0;https://pxls.space/#x=702&y=1645&scale=5&template=https%3A%2F%2Fclueless-r2.pxls.space%2F623d7f71a4f97fd6.png&ox=447&oy=1380&tw=511&title=PFam%20V2&convert=unconverted">
   <title>Redirecting...</title>
   <style>
     body {
