--- a/Dotted.html
+++ b/Dotted.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
 <!--paste template url into content="0;" when updating template-->
-  <meta http-equiv="refresh" content="0;https://pxls.space/#x=712&y=1622&scale=5&template=https%3A%2F%2Fclueless-r2.pxls.space%2F3a3f6ecea9539015.png&ox=452&oy=1383&tw=500&title=PFamDotted&convert=unconverted">
+  <meta http-equiv="refresh" content="0;https://pxls.space/#x=707&y=1597&scale=5&template=https%253A%252F%252Fclueless-r2.pxls.space%252F9aad759025915b20.png&ox=447&oy=1380&tw=511&title=PFam%20V2%20Dotted&convert=unc">
   <title>Redirecting...</title>
   <style>
     body {
@@ -23,7 +23,7 @@
   <!--same as above comment-->
   <p>
     If you are not redirected, 
-    <a href="https://pxls.space/#x=712&y=1622&scale=5&template=https%3A%2F%2Fclueless-r2.pxls.space%2F3a3f6ecea9539015.png&ox=452&oy=1383&tw=500&title=PFamDotted&convert=unconverted">click here</a>.
+    <a href="https://pxls.space/#x=707&y=1597&scale=5&template=https%253A%252F%252Fclueless-r2.pxls.space%252F9aad759025915b20.png&ox=447&oy=1380&tw=511&title=PFam%20V2%20Dotted&convert=unc">click here</a>.
   </p>
 </body>
 </html>
