--- a/Numbers.html
+++ b/Numbers.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <!--paste new template url in the content="0;" when updating template-->
-  <meta http-equiv="refresh" content="0;https://pxls.space/#x=801&y=1573&scale=5&template=https%3A%2F%2Fclueless-r2.pxls.space%2Fedce87939fb2097c.png&ox=447&oy=1380&tw=506&title=PFam%20v3%20Numbers&convert=unconverted">
+  <meta http-equiv="refresh" content="0;https://pxls.space/#x=930&y=1428&scale=10.44&template=https%3A%2F%2Fclueless-r2.pxls.space%2Fa981073819d76eb2.png&ox=447&oy=1380&tw=506&title=&convert=unconverted">
   <title>Redirecting...</title>
   <style>
     body {
@@ -23,7 +23,7 @@
 <!--same as above comment-->
   <p>
     If you are not redirected, 
-    <a href="https://pxls.space/#x=801&y=1573&scale=5&template=https%3A%2F%2Fclueless-r2.pxls.space%2Fedce87939fb2097c.png&ox=447&oy=1380&tw=506&title=PFam%20v3%20Numbers&convert=unconverted">click here</a>.
+    <a href="https://pxls.space/#x=930&y=1428&scale=10.44&template=https%3A%2F%2Fclueless-r2.pxls.space%2Fa981073819d76eb2.png&ox=447&oy=1380&tw=506&title=&convert=unconverted">click here</a>.
   </p>
 </body>
 </html>
