--- a/Main.html
+++ b/Main.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <!--paste new template url into content="0;" when updating-->
-  <meta http-equiv="refresh" content="0;https://pxls.space/#x=812&y=1448&scale=6.25&template=https%3A%2F%2Fclueless-r2.pxls.space%2Fba9ab0d1fb47eee0.png&ox=447&oy=1380&tw=506&title=&convert=unconverted">
+  <meta http-equiv="refresh" content="0;https://pxls.space/#x=82&y=1346&scale=1.07&template=https%3A%2F%2Fclueless-r2.pxls.space%2F3288533302143230.png&ox=250&oy=1149&tw=308&title=PFam&convert=unconverted">
   <title>Redirecting...</title>
   <style>
     body {
@@ -23,7 +23,7 @@
   <!--same as above comment-->
   <p>
     If you are not redirected, 
-    <a href="https://pxls.space/#x=812&y=1448&scale=6.25&template=https%3A%2F%2Fclueless-r2.pxls.space%2Fba9ab0d1fb47eee0.png&ox=447&oy=1380&tw=506&title=&convert=unconverted">click here</a>.
+    <a href="https://pxls.space/#x=82&y=1346&scale=1.07&template=https%3A%2F%2Fclueless-r2.pxls.space%2F3288533302143230.png&ox=250&oy=1149&tw=308&title=PFam&convert=unconverted">click here</a>.
   </p>
 </body>
 </html>
