--- a/Dotted.html
+++ b/Dotted.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
 <!--paste template url into content="0;" when updating template-->
-  <meta http-equiv="refresh" content="0;https://pxls.space/#x=832&y=1439&scale=5&template=https%3A%2F%2Fclueless-r2.pxls.space%2Fdfc33916b528ea62.png&ox=447&oy=1380&tw=506&title=&convert=unconverted">
+  <meta http-equiv="refresh" content="0;https://pxls.space/#x=312&y=1192&scale=10.75&template=https%3A%2F%2Fclueless-r2.pxls.space%2F9cf1e58b6f7bb2fb.png&ox=249&oy=1148&tw=310&title=PFamDotted&convert=unconverted">
   <title>Redirecting...</title>
   <style>
     body {
@@ -23,7 +23,7 @@
   <!--same as above comment-->
   <p>
     If you are not redirected, 
-    <a href="https://pxls.space/#x=832&y=1439&scale=5&template=https%3A%2F%2Fclueless-r2.pxls.space%2Fdfc33916b528ea62.png&ox=447&oy=1380&tw=506&title=&convert=unconverted">click here</a>.
+    <a href="https://pxls.space/#x=312&y=1192&scale=10.75&template=https%3A%2F%2Fclueless-r2.pxls.space%2F9cf1e58b6f7bb2fb.png&ox=249&oy=1148&tw=310&title=PFamDotted&convert=unconverted">click here</a>.
   </p>
 </body>
 </html>
