--- a/Main.html
+++ b/Main.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <!--paste new template url into content="0;" when updating-->
-  <meta http-equiv="refresh" content="0;https://pxls.space/#x=324&y=1187&scale=10.75&template=https%3A%2F%2Fclueless-r2.pxls.space%2F76b5fa216a67d1f9.png&ox=249&oy=1148&tw=310&title=PFam&convert=unconverted">
+  <meta http-equiv="refresh" content="0;https://pxls.space/#x=268&y=1199&scale=5&template=https%3A%2F%2Fclueless-r2.pxls.space%2Fe8fc2d8dffd1d436.png&ox=249&oy=1148&tw=310&title=PFam%20V2&convert=unconverted">
   <title>Redirecting...</title>
   <style>
     body {
@@ -23,7 +23,7 @@
   <!--same as above comment-->
   <p>
     If you are not redirected, 
-    <a href="https://pxls.space/#x=324&y=1187&scale=10.75&template=https%3A%2F%2Fclueless-r2.pxls.space%2F76b5fa216a67d1f9.png&ox=249&oy=1148&tw=310&title=PFam&convert=unconverted">click here</a>.
+    <a href="https://pxls.space/#x=268&y=1199&scale=5&template=https%3A%2F%2Fclueless-r2.pxls.space%2Fe8fc2d8dffd1d436.png&ox=249&oy=1148&tw=310&title=PFam%20V2&convert=unconverted">click here</a>.
   </p>
 </body>
 </html>
