--- a/Numbers.html
+++ b/Numbers.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <!--paste new template url in the content="0;" when updating template-->
-  <meta http-equiv="refresh" content="0;https://pxls.space/#x=277&y=1204&scale=5&template=https%3A%2F%2Fclueless-r2.pxls.space%2F0064028425e0c6f8.png&ox=249&oy=1148&tw=310&title=PFamNumbers&convert=unconverted">
+  <meta http-equiv="refresh" content="0;https://pxls.space/#x=456&y=1313&scale=5&template=https%3A%2F%2Fclueless-r2.pxls.space%2F36ede1d2d5a468fe.png&ox=249&oy=1148&tw=310&title=PFamNumbersv2&convert=unconverted">
   <title>Redirecting...</title>
   <style>
     body {
@@ -23,7 +23,7 @@
 <!--same as above comment-->
   <p>
     If you are not redirected, 
-    <a href="https://pxls.space/#x=277&y=1204&scale=5&template=https%3A%2F%2Fclueless-r2.pxls.space%2F0064028425e0c6f8.png&ox=249&oy=1148&tw=310&title=PFamNumbers&convert=unconverted">click here</a>.
+    <a href="https://pxls.space/#x=456&y=1313&scale=5&template=https%3A%2F%2Fclueless-r2.pxls.space%2F36ede1d2d5a468fe.png&ox=249&oy=1148&tw=310&title=PFamNumbersv2&convert=unconverted">click here</a>.
   </p>
 </body>
 </html>
