--- a/Full.html
+++ b/Full.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <!--paste template url into content="0;" when updating template-->
-  <meta http-equiv="refresh" content="0;https://pxls.space/#x=1113&y=1358&scale=2.31&template=https%3A%2F%2Fclueless-r2.pxls.space%2Feded170f4dcf3878.png&ox=943&oy=1042&tw=540&title=PFamV4&convert=unconverted">
+  <meta http-equiv="refresh" content="0;https://pxls.space/#x=381&y=1237&scale=2.28&template=https%3A%2F%2Fclueless-r2.pxls.space%2F16bdf70d03489da3.png&ox=199&oy=1148&tw=360&title=&convert=unconverted">
   <title>Redirecting...</title>
   <style>
     body {
@@ -23,7 +23,7 @@
 <!--same as above comment-->
   <p>
     If you are not redirected, 
-    <a href="https://pxls.space/#x=1113&y=1358&scale=2.31&template=https%3A%2F%2Fclueless-r2.pxls.space%2Feded170f4dcf3878.png&ox=943&oy=1042&tw=540&title=PFamV4&convert=unconverted">click here</a>.
+    <a href="https://pxls.space/#x=381&y=1237&scale=2.28&template=https%3A%2F%2Fclueless-r2.pxls.space%2F16bdf70d03489da3.png&ox=199&oy=1148&tw=360&title=&convert=unconverted">click here</a>.
   </p>
 </body>
 </html>
