--- a/Dotted.html
+++ b/Dotted.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
 <!--paste template url into content="0;" when updating template-->
-  <meta http-equiv="refresh" content="0;https://pxls.space/#x=744&y=361&scale=5&template=https%3A%2F%2Fclueless-r2.pxls.space%2F9573bb571c910201.png&ox=546&oy=183&tw=352&title=Pfam_c101_Dotted&convert=unconverted">
+  <meta http-equiv="refresh" content="0;https://pxls.space/#x=800&y=314&scale=5&template=https%3A%2F%2Fclueless-r2.pxls.space%2F919ac04a5f3ec434.png&ox=546&oy=183&tw=352&title=Pfam_c101_Dotted_V2&convert=unconverted">
   <title>Redirecting...</title>
   <style>
     body {
@@ -23,7 +23,7 @@
   <!--same as above comment-->
   <p>
     If you are not redirected, 
-    <a href="https://pxls.space/#x=744&y=361&scale=5&template=https%3A%2F%2Fclueless-r2.pxls.space%2F9573bb571c910201.png&ox=546&oy=183&tw=352&title=Pfam_c101_Dotted&convert=unconverted">click here</a>.
+    <a href="https://pxls.space/#x=800&y=314&scale=5&template=https%3A%2F%2Fclueless-r2.pxls.space%2F919ac04a5f3ec434.png&ox=546&oy=183&tw=352&title=Pfam_c101_Dotted_V2&convert=unconverted">click here</a>.
   </p>
 </body>
 </html>
