--- a/Full.html
+++ b/Full.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <!--paste template url into content="0;" when updating template-->
-  <meta http-equiv="refresh" content="0;https://pxls.space/#x=686&y=284&scale=2.33&template=https%3A%2F%2Fclueless-r2.pxls.space%2F58b492818119c35e.png&ox=546&oy=217&tw=322&title=&convert=unconverted">
+  <meta http-equiv="refresh" content="0;https://pxls.space/#x=686&y=284&scale=2.33&template=https%3A%2F%2Fclueless-r2.pxls.space%2F58b492818119c35e.png&ox=546&oy=217&tw=322&title=PFam_Full&convert=unconverted">
   <title>Redirecting...</title>
   <style>
     body {
@@ -23,7 +23,7 @@
 <!--same as above comment-->
   <p>
     If you are not redirected, 
-    <a href="https://pxls.space/#x=686&y=284&scale=2.33&template=https%3A%2F%2Fclueless-r2.pxls.space%2F58b492818119c35e.png&ox=546&oy=217&tw=322&title=&convert=unconverted">click here</a>.
+    <a href="https://pxls.space/#x=686&y=284&scale=2.33&template=https%3A%2F%2Fclueless-r2.pxls.space%2F58b492818119c35e.png&ox=546&oy=217&tw=322&title=PFam_Full&convert=unconverted">click here</a>.
   </p>
 </body>
 </html>
