--- a/Dotted.html
+++ b/Dotted.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
 <!--paste template url into content="0;" when updating template-->
-  <meta http-equiv="refresh" content="0;https://pxls.space/#x=818&y=471&scale=5&template=https%3A%2F%2Fclueless-r2.pxls.space%2Fa824fa4cc9022bfa.png&ox=559&oy=231&tw=303&title=Pfam_c101_Dotted_V3&convert=unconverted">
+  <meta http-equiv="refresh" content="0;https://pxls.space/#x=712&y=313&scale=2.33&template=https%3A%2F%2Fclueless-r2.pxls.space%2F5c0eb6925e65e112.png&ox=546&oy=217&tw=322&title=PFam_Dotted_Full&convert=unconverted">
   <title>Redirecting...</title>
   <style>
     body {
@@ -23,7 +23,7 @@
   <!--same as above comment-->
   <p>
     If you are not redirected, 
-    <a href="https://pxls.space/#x=818&y=471&scale=5&template=https%3A%2F%2Fclueless-r2.pxls.space%2Fa824fa4cc9022bfa.png&ox=559&oy=231&tw=303&title=Pfam_c101_Dotted_V3&convert=unconverted">click here</a>.
+    <a href="https://pxls.space/#x=712&y=313&scale=2.33&template=https%3A%2F%2Fclueless-r2.pxls.space%2F5c0eb6925e65e112.png&ox=546&oy=217&tw=322&title=PFam_Dotted_Full&convert=unconverted">click here</a>.
   </p>
 </body>
 </html>
